--- a/.github/workflows/workflow-ansible.yaml
+++ b/.github/workflows/workflow-ansible.yaml
@@ -1,3 +1,4 @@
+
 # This is a basic workflow to help you get started with Actions
 name: Ansible Docker Swarm
 # Controls when the workflow will run
@@ -24,7 +25,7 @@ jobs:
         uses: ansible-community/ansible-lint-action@v6.0.2
         with:
           args: "ansible" # my ansible files in a folder
-  run-playbook:
+   run-playbook:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 		# The validate Job need to be sucessfull
@@ -40,7 +41,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
+       - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_KEY }}
+          name: id_rsa # optional
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+          # config: ${{ secrets.CONFIG }} # ssh_config; optional
+          if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
         - name: run playbook
           run: |
-          ansible-playbook -i inventory Ansible/playbook.yaml
+          ansible-playbook -i inventory ansible/hello-world.yaml
           
