--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies Including Ansible
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python3 -m pip install  ansible
         - name: run playbook
           run: |
           ansible-playbook -i inventory Ansible/playbook.yaml
