--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -28,7 +28,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 		# The validate Job need to be sucessfull
-		needs: [ validate ]
+    needs: [ validate ]
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -40,6 +40,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python3 -m pip install  ansible
-        - name: run playbook
-          run: |
-          ansible-playbook -i inventory Ansible/playbook.yaml
+      - name: run playbook
+        run: |
+          ansible-playbook -i Ansible/inventory.yaml Ansible/playbook.yaml
