--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -3,8 +3,8 @@
   user: root
   tasks:                                                                                                       
   - name: create a python virtual environment
-    shell: python3 -m venv /opt/python_venvs/
+    shell: python3 -m venv venv/
   - name: Activate the virtual environment
-    shell: source /opt/python_venvs/bin/activate
+    shell: source venv/bin/activate
   - name: Install all dependencies
     shell: pip install -r requirements1.txt
