--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -12,3 +12,6 @@
       executable: /bin/bash
   - name: Install all dependencies
     shell: pip install -r ../venv/{{requierement}}.txt
+  - name: Deactivate the environment 
+    shell: deactivate
+
