--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -7,13 +7,9 @@
   - name: create a python virtual environment
     shell: python3 -m venv /opt/python_venvs/{{requierement}}/
   - name: Activate the virtual environment
-    shell: source /opt/python_venvs/{{requierement}}/bin/activate
-    args:
-      executable: /bin/bash
-  - name: Install all dependencies
-    shell: pip install -r ../venv/{{requierement}}.txt
-  - name: Deactivate the environment 
-    shell: source deactivate
-    args:
-      executable: /bin/bash
+    shell: |
+    source /opt/python_venvs/{{requierement}}/bin/activate
+    pip install -r ../venv/{{requierement}}.txt
+    deactivate
+    
 
