--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -7,9 +7,13 @@
   - name: create a python virtual environment
     shell: python3 -m venv /opt/python_venvs/{{requierement}}/
   - name: Activate the virtual environment
-    shell: |
-    source "/opt/python_venvs/{{requierement}}/bin/activate"
-    pip install -r "../venv/{{requierement}}.txt"
-    deactivate
+    shell: "{{ item }}"
+    with_items:
+    - source "/opt/python_venvs/{{requierement}}/bin/activate"
+    - pip install -r "../venv/{{requierement}}.txt"
+    - deactivate
+    
+    
+    
     
 
