--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -12,6 +12,8 @@
     - source "/opt/python_venvs/{{requierement}}/bin/activate"
     - pip install -r "../venv/{{requierement}}.txt"
     - deactivate
+    args:
+      executable: /bin/bash
     
     
     
