--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -3,11 +3,8 @@
   user: root
   tasks: 
 - name: "create python virtual environment from the venv folder"
-  shell: |
-      python3 -m venv /opt/python_venvs/{{ item | basename }}/
-      source "/opt/python_venvs/{{ item | basename }}/bin/activate"
-      pip install -r "../venv/{{ item | basename }}.txt"
-      deactivate
+  shell:
+      python3 -m venv "/opt/python_venvs/{{ item | basename }}/"
   args:
     executable: /bin/bash
     chdir: "../venv/"
