--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -2,11 +2,15 @@
   hosts: localhost
   user: root
   tasks: 
-- name: "create python virtual environment from the venv folder"
-  shell: "python3 -m venv /opt/python_venvs/{{ item | basename }}/"
-  args:
-    executable: /bin/bash
-    chdir: "../venv/"
-  with_fileglob: "../venv/*.txt"
-  loop_control:
-    label: "{{ item | basename }}"
+  - name: "create python virtual environment from the venv folder"
+    shell: |
+      python3 -m venv /opt/python_venvs/{{ item | basename }}/
+      source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+      pip install -r "../venv/{{ item | basename }}.txt"
+      deactivate
+    args:
+      executable: /bin/bash
+      chdir: "../venv/"
+    with_fileglob: "../venv/*.txt"
+    loop_control:
+      label: "{{ item | basename }}"
