--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -1,6 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 name:  CI
 # Controls when the workflow will run
+env:
+    CHANGED_fILES: devmtl
+  
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -40,19 +43,24 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python3 -m pip install  ansible
-      - name: run playbook
-        run: |
-          ansible-playbook  Ansible/playbook.yaml
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
-
+          
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v26.1
 
       - name: List all changed files
         run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}|find venv/*.txt ; do
+          for file in ${{ steps.changed-files.outputs.all_changed_files }} ; do
             echo "$file was changed"
           done
+      - name: Filter all files under  venv/ folder
+        run: 
+          CHANGED_fILES = $(find ${{ steps.changed-files.outputs.all_changed_files }} venv/*.txt);
+           
+      - name: run playbook
+        run: |
+          ansible-playbook  Ansible/playbook.yaml
+
