--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -58,7 +58,7 @@ jobs:
           done
       - name: Filter all files under  venv/ folder
         run: |
-            CHANGED_fILES=`find ${{ steps.changed-files.outputs.all_changed_files }} venv/*.txt`
+            CHANGED_fILES=`grep ${{ steps.changed-files.outputs.all_changed_files }} venv/*.txt`
             echo $CHANGED_fILES
            
       - name: run playbook
