--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -57,7 +57,7 @@ jobs:
           done
       - name: Filter all files under  venv/ folder
         run: |
-            CHANGED_fILES=`grep ${{ steps.changed-files.outputs.all_changed_files }} -name "venv/*.txt"`
+            CHANGED_fILES=`find ${{ steps.changed-files.outputs.all_changed_files }} -name "venv/*"`
             echo $CHANGED_fILES
            
       - name: run playbook
