--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -34,6 +34,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
@@ -42,10 +44,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python3 -m pip install  ansible
-          
-      - uses: actions/checkout@v2
+
       - name: List all changed files under  venv/ folder
-        uses: tj-actions/verify-changed-files@v10.1
+        uses: tj-actions/changed-files@v26.1
         id: verify-changed-files
         with:
           files: venv/*.txt 
