--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -50,6 +50,8 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v26.1
+        with:
+          files: venv/*.txt
 
       - name: List all changed files
         run: |
