--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -52,9 +52,8 @@ jobs:
         uses: tj-actions/changed-files@v26.1
         with:
           files: venv/*.txt
-
       - name: Run step only when files change.
-        if: steps.changed-files.outputs.files_changed == 'true'
+        if: ${{ steps.changed-files.outputs.changed_files }} != ""
         run: |
           echo "Changed files: ${{ steps.changed-files.outputs.changed_files }}"
 
