--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           files: venv/*.txt
       - name: Run step only when files change.
-        if: ${{ steps.changed-files.outputs.changed_files }} != ""
+        if: ${{ steps.changed-files.outputs.changed_files }}
         run: |
           echo "Changed files: ${{ steps.changed-files.outputs.changed_files }}"
 
