--- a/Ansible/playbook-changed-files.yaml
+++ b/Ansible/playbook-changed-files.yaml
@@ -6,14 +6,21 @@
   tasks: 
   - name: "create python virtual environment from the  changed files under venv  "
     shell: |
-      source "/opt/python_venvs/{{ item | basename }}/bin/activate"
-      Installed_package= `pip freez`
-      for line in $(cat ../venv/{{ item | basename }}.txt) ;  
-         if ! grep $line $Installed_package ;then
-            pip install $line
-         fi;
-      done      
-      deactivate
+      if  [ -d /opt/python_venvs/{{ item | basename }}/ ]; then 
+         source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+         Installed_package= `pip freez`
+         for line in $(cat ../venv/{{ item | basename }}.txt) ;  
+            if ! grep $line $Installed_package ;then
+                 pip install $line
+            fi;
+         done      
+         deactivate
+      else
+          python3 -m venv /opt/python_venvs/{{ item | basename }}/
+          source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+          pip install -r "../venv/{{ item | basename }}.txt"
+          deactivate
+      fi;
     args:
       executable: /bin/bash
     loop: "{{ changed_files }}"
