--- a/Ansible/playbook-changed-files.yaml
+++ b/Ansible/playbook-changed-files.yaml
@@ -4,7 +4,6 @@
   vars:
     my_changed_files: "{{ changed_files }}"
   tasks: 
-  - debug:
-      msg: "{{ item }}"
-    loop: "{{ my_changed_files }}"
+  - name: Display variable
+    debug: var=my_changed_files
    
