--- a/Ansible/playbook-changed-files.yaml
+++ b/Ansible/playbook-changed-files.yaml
@@ -2,7 +2,8 @@
   hosts: localhost
   user: root
   vars:
-    my_changed_files: "{{ changed_files }}"
+    my_changed_files: "{{ lookup('env', 'changed_files') }}"
+
   tasks: 
   - debug:
       msg: "{{ item }}"
