--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -55,8 +55,9 @@ jobs:
       - name: Run step only when files change.
         if: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
-          echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
-          ansible-playbook  Ansible/playbook-changed-files.yaml --extra-vars "changed_files=${{ steps.changed-files.outputs.all_changed_files }}"
+          changed_files=${{ steps.changed-files.outputs.all_changed_files }}
+          echo "Changed files: ${{ changed_files }}"
+          ansible-playbook  Ansible/playbook-changed-files.yaml 
 
       - name: run playbook
         run: |
