--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -55,9 +55,10 @@ jobs:
       - name: Run step only when files change.
         if: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
-          changed_files_var=${{ steps.changed-files.outputs.all_changed_files }}
-          echo "Changed files: ${{ changed_files_var }}"
+          echo "Changed files: $changed_files_var"
           ansible-playbook  Ansible/playbook-changed-files.yaml 
+        env:
+          changed_files_var: ${{ steps.changed-files.outputs.all_changed_files }}
 
       - name: run playbook
         run: |
