--- a/.github/workflows/install-venv.yaml
+++ b/.github/workflows/install-venv.yaml
@@ -42,17 +42,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python3 -m pip install  ansible
-
+          
+      - name: Install python venv on new server
+        run: |
+          ansible-playbook  Ansible/playbook.yaml
+          
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
-
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.    
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v26.1
         with:
           files: venv/*.txt 
-      - name: Run step only when files change.
+      - name: Install python the new python packages
         if: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
           echo "Changed files: $changed_files_var"
@@ -60,7 +63,5 @@ jobs:
         env:
           changed_files_var: ${{ steps.changed-files.outputs.all_changed_files }}
 
-      - name: run playbook
-        run: |
-          ansible-playbook  Ansible/playbook.yaml
+     
 
