--- a/Ansible/playbook-changed-files.yaml
+++ b/Ansible/playbook-changed-files.yaml
@@ -20,7 +20,7 @@
          done      
          deactivate
       else
-          sudo python3 -m venv /opt/python_venvs/{{ item | basename }}/
+          python3 -m venv /opt/python_venvs/{{ item | basename }}/
           source "/opt/python_venvs/{{ item | basename }}/bin/activate"
           pip install -r "../venv/{{ item | basename }}"
           deactivate
