--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -8,8 +8,9 @@
     register: p
   - name: "create python virtual environment from the venv folder /opt/python_venvs/ doesn't exist  "
     shell: |
-      sudo python3 -m venv /opt/python_venvs/{{ item | basename }}/
-      source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+      File= `cut -f 1 -d '.' {{ item | basename }}`
+      sudo python3 -m venv /opt/python_venvs/$File/
+      source "/opt/python_venvs/$File/bin/activate"
       pip install -r "../venv/{{ item | basename }}"
       deactivate
     args:
