--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -8,7 +8,8 @@
     register: p
   - name: "create python virtual environment from the venv folder /opt/python_venvs/ doesn't exist  "
     shell: |
-      File= `cut -f 1 -d '.' {{ item | basename }}`
+      Item= {{ item | basename }}
+      File=$(echo "$Item" | cut -f 1 -d '.')
       sudo python3 -m venv /opt/python_venvs/$File/
       source "/opt/python_venvs/$File/bin/activate"
       pip install -r "../venv/{{ item | basename }}"
