--- a/Ansible/playbook-changed-files.yaml
+++ b/Ansible/playbook-changed-files.yaml
@@ -10,8 +10,8 @@
     with_items: "{{ my_changed_files }}"
   - name: "create python virtual environment from the  changed files under venv  "
     shell: |
-      if  [  -e /opt/python_venvs/{{ item | basename }}/ ]; then 
-         source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+      if  [  -e /opt/python_venvs/{{ item | basename| splitext | first  }}/ ]; then 
+         source "/opt/python_venvs/{{ item | basename| splitext | first  }}/bin/activate"
          Installed_package= `pip freeze`
          for line in $(cat ../venv/{{ item | basename }}) ; do
             if ! grep $line $Installed_package ;then
@@ -20,8 +20,8 @@
          done      
          deactivate
       else
-          sudo python3 -m venv /opt/python_venvs/{{ item | basename }}/
-          source "/opt/python_venvs/{{ item | basename }}/bin/activate"
+          sudo python3 -m venv /opt/python_venvs/{{ item | basename| splitext | first  }}/
+          source "/opt/python_venvs/{{ item | basename| splitext | first  }}/bin/activate"
           pip install -r "../venv/{{ item | basename }}"
           deactivate
       fi;
